fix cards alignment

--- a/02-CSS/index_Page_Card.css
+++ b/02-CSS/index_Page_Card.css
@@ -5,7 +5,7 @@
   background-color: seashell;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .one {
